--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,27 @@
+html{
+	font-size: 16px;
+}
+
 @font-face{
 	font-family: 'Wisdom Script';
 	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
 
-html {
-    font-size:16px;
-}
-
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
-  justify-content: center;
-  align-items: center;
-	font-size:1em;
+	justify-content: center;
+	align-items: center;
+	font-size: 1em;
 }
 
 .container{
 	max-width: 1200px;
-	margin: 0 auto;
 	display: flex;
-  justify-content: center;
-  align-items: center;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+	width: 90%;
 }
 
 h1,
@@ -31,155 +32,114 @@ h4 {
 	text-transform: uppercase;
 	font-weight: 700;
 }
-h1 {
-	font-size: 1.875em;
-}
-h2 {
-    font-size: 1.5em;
-}
-h3 {
-	font-size: 1.125em;
-}
-h4 {
-	font-size: 0.75em;
-}
 
-p {
-	font-size: 0.875;
-	line-height: 1.3125em;
-    padding: 0 30px;
-}
-
-/*The widths are in a percentage!*/
-header {
-	height: 110px;
-	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+header{
 	display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-header h1 {
-	float: left;
-	margin: 0;
-	padding: 38px 0;
-}
-header h1 span {
-	color: #77a466;
-}
-
-header nav {
-	float: right;
-	padding: 46px 0;
-}
-header nav ul {
-	margin: 0;
-	padding: 0;
-}
-header nav ul li {
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 14px;
-	padding: 0 10px;
-	display: inline;
-}
-header nav ul li a{
-	text-decoration: none;
-	color:#77a466;
-}
-
-/*The widths are in a percentage!*/
-.top-section,
-.bottom-section {
-	margin: 0 auto;
-	clear: both;
-	display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-image {
-	height: auto;
-	float: left;
-}
-.main-image img {
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-	float: left;
+header h1{
+	font-size: 1.875em;
+	border-bottom: 3px solid #77a466;
+	width: 100%;
+	padding:38px 20px 20px 20px;
+
 }
-.main-title h3 {
-	text-align: left;
-	padding: 5px 0;
+
+header h1 span {
 	color: #77a466;
 }
-.main-title p {
+
+header nav{
+	padding: 10px 0 10px;
+	width: 100%;
+	text-align: center;
+}
+
+header nav ul{
+	margin: 0;
 	padding: 0;
-	font-size: 16px;
-	line-height: 25px;
+}
+
+header nav ul li{
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: .875em;
+	list-style: none;
+	padding: 10px 0;
+}
+
+header nav ul li a{
+	text-decoration: none;
+	color: #77a466;
+}
+
+.top-section, .bottom-section{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+}
+
+.main-image img{
+	width: 100%;
+	border-bottom: 3px solid #77a466;
+}
+
+.main-title h3{
+	text-align: center ;
+	color: #77a466;
+	font-size: 1.125em;
+	padding: 5px 0;
+}
+
+.main-title p{
+	font-size: 1em;
+	line-height: 1.5625;
+	padding: 0;
 }
 
 .section-one,
 .section-two,
-.section-three {
-	width: 33%;
-	height: auto;
-	float: left;
-	border-top: 1px solid #eee;
+.section-three{
+border-top: 1px solid #eee;
+width: 100%;
 }
 
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 30px;
-}
-
-.menu {
+.menu{
 	list-style: none;
 	padding: 0;
 }
-.menu li {
+
+.menu li{
 	padding: 10px 0;
-	color:#77a466;
+	color: #77a466;
 }
 
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125;
 }
 
-.address {
+.address{
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5;
 }
 
-/*The widths are in a percentage!*/
-footer {
-	height: 50px;
+footer{
 	border-top: 3px solid #eee;
-	margin: 0 auto;
-	clear: both;
+	width: 100%;
 	text-align: center;
-	display: flex;
-  justify-content: center;
-  align-items: center;
 }
+
 footer span {
 	font-family: 'Wisdom Script', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 14px;
+	font-size: .875em;
 }
