--- a/css/main.css
+++ b/css/main.css
@@ -143,3 +143,127 @@ footer span {
 	color: #77a466;
 	font-size: .875em;
 }
+
+@media all and (min-width:768px) {
+    /* Tablet styles here */
+
+		.top-section{
+			border-bottom: 1px solid #eee;
+		}
+
+		.main-title h3{
+			text-align: left;
+		}
+
+		.bottom-section{
+			justify-content: space-between;
+			align-items: flex-start;
+
+		}
+
+		.section-one,
+		.section-two,
+		.section-three {
+			width: 33%;
+			border-top: none;
+		}
+
+		.section-two{
+			border-left: 1px solid #eee;
+			border-right: 1px solid #eee;
+		}
+
+		.section-one h4{
+			padding: 10px 0;
+		}
+
+		.section-two h4,
+		.section-three h4 {
+			padding: 10px 30px;
+}
+		.section-two p,
+		.section-three p {
+			padding: 0 30px;
+}
+
+		h4{
+			font-size: 0.75em;
+		}
+
+
+}
+
+@media all and (min-width:1200px) {
+    /* Desktop styles here */
+
+		header{
+			justify-content: space-between;
+			padding: 20px;
+		}
+
+		header h1{
+			width: 30%;
+			padding: 0;
+			border-bottom: none;
+			text-align: left;
+		}
+
+		header nav{
+			width: 45%;
+		}
+
+		header nav ul {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		header nav ul li{
+			padding-right: 15px;
+		}
+
+		.top-section{
+			border-bottom: 1px solid #eee;
+		}
+
+		.main-title h3{
+			text-align: left;
+		}
+
+		.bottom-section{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			flex-flow: row wrap;
+		}
+
+		.section-one,
+		.section-two,
+		.section-three {
+			width: 33%;
+			height: 200px;
+			border-top: none;
+}
+
+		.section-two{
+			border-left: 1px solid #eee;
+			border-right: 1px solid #eee;
+		}
+
+		.section-one h4{
+			padding: 10px 0;
+		}
+
+		.section-two h4,
+		.section-three h4 {
+			padding: 10px 30px;
+}
+		.section-two p,
+		.section-three p {
+			padding: 0 30px;
+}
+
+		h4{
+			font-size: 0.75em;
+		}
+
+}
